Try project page as header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!--
 ---
 layout: default
 ---
 
-{% include header.html %}
+--{% include header.html %}-->
+
+---
+layout: default
+title: Projects
+permalink: /projects/
+weight: 1
+---
+
+{% include projects.html %}
